.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Employee_Detail__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Test_employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employee_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__View_CV__c</fullName>
        <formula>xcdhcm__Applicant_L__r.xcdhcm__View_CV__c</formula>
        <label>View CV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_Email_Address__c</fullName>
        <label>z Work email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_email__c</fullName>
        <formula>xcdhcm__User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_pattern__c</fullName>
        <formula>CASE(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c,
  &quot;Regular work pattern - days&quot;, &quot;Regular - days&quot;,
  &quot;Flexible working days&quot;, &quot;Flexible - days&quot;,
  &quot;Regular work pattern - hours&quot;, &quot;Regular - hours&quot;,
  TEXT(xcdhcm__Job_Role__r.xcdhcm__Pattern_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work pattern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_phone__c</fullName>
        <formula>xcdhcm__User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work phone number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Years_service_at_anniversary_date__c</fullName>
        <formula>Year( xcdhcm__LOS_Anniversary__c ) - year ( xcdhcm__Continuous_Service_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years service at anniversary date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__isNewJoiner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNewJoiner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zCompany__c</fullName>
        <description>Used for Company Admin sharing settings</description>
        <label>zCompany sharing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zDepartment__c</fullName>
        <description>Updates by workflow from Job role.  Used for sharing</description>
        <label>zDepartment sharing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zManager_appointment_date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>zManager appointment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zPayroll_eligibility__c</fullName>
        <description>Use for record sharing with Payroll Administrators - Populated by code detail in NPay-120</description>
        <label>zPayroll eligibility</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zPayroll_frequency__c</fullName>
        <description>Use for record sharing with Payroll Administrators - Populated by code detail in NPPD-1343</description>
        <label>zPayroll frequency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__zYear_Leaving_Date__c</fullName>
        <formula>text(year( xcdhcm__Leaving_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zYear Leaving Date</label>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>DO_NOT_TOUCH</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>DO NOT</value>
        </filters>
        <label>DO NOT TOUCH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test_Employees</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>xcdhcm__Employmentstatusformula__c</columns>
        <columns>xcdhcm__Employment_Type__c</columns>
        <columns>xcdhcm__Work_pattern__c</columns>
        <columns>xcdhcm__Job_Role__c</columns>
        <columns>xcdhcm__Manager__c</columns>
        <columns>xcdhcm__User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Companies__c</field>
            <operation>contains</operation>
            <value>DO NOT TOUCH COREHR</value>
        </filters>
        <label>Test Employees</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Employment_Status__c</columns>
        <columns>xcdhcm__Employment_Type__c</columns>
        <columns>xcdhcm__Work_email__c</columns>
        <columns>xcdhcm__Work_pattern__c</columns>
        <columns>xcdhcm__Work_phone__c</columns>
        <columns>xcdhcm__Manager__c</columns>
        <columns>xcdhcm__User__c</columns>
        <columns>xcdhcm__Leaving_Date__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DO NOT TOUCH COREHR</value>
        </filters>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All_Employees</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__P_Job_Title__c</columns>
        <columns>xcdhcm__Department__c</columns>
        <columns>xcdhcm__Employment_Type__c</columns>
        <columns>xcdhcm__Employmentstatusformula__c</columns>
        <columns>xcdhcm__Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <listViews>
        <fullName>xcdhcm__All_view</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Job_Role__c</columns>
        <columns>xcdhcm__Work_pattern__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>xcdhcm__Companies__c</columns>
        <filterScope>Everything</filterScope>
        <label>All view</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Consleague</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Companies__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Companies__c</field>
            <operation>equals</operation>
            <value>Consleague</value>
        </filters>
        <label>Consleague</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>xcdhcm__XCD</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Company__c</columns>
        <columns>xcdhcm__Start_Date__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>xcdhcm__Last_working_day__c</columns>
        <columns>xcdhcm__Leaving_Date__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>xcdhcm__Company__c</field>
            <operation>equals</operation>
            <value>XCD</value>
        </filters>
        <label>Select company</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Employee name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>xcdhcm__Record_Creator__c</fullName>
        <label>Record Creator</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>xcdhcm__XCD_Sharing__c</fullName>
        <label>XCD_Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>xcdhcm__Change_In_Name</fullName>
        <active>true</active>
        <description>change name only from the change name button under personal tab of employee.</description>
        <errorConditionFormula>IF
(
  AND
  (
    CONTAINS( xcdhcm__User__r.Profile.Name , &apos;HRMS&apos;), 
    ISCHANGED(Name)
  ),
  IF
  (
	AND
	(
	    xcdhcm__User__r.xcdhcm__Allow_Name_Change__c, 
	    Name == xcdhcm__User__r.FirstName + &apos; &apos;+  xcdhcm__User__r.LastName
	),
	false,
	true
  ),
  false
)</errorConditionFormula>
        <errorMessage>Change names for HR users using the Change name button from personal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Continuous_Service_Date</fullName>
        <active>true</active>
        <description>Do not deactivate</description>
        <errorConditionFormula>xcdhcm__Continuous_Service_Date__c &gt; xcdhcm__Start_Date__c</errorConditionFormula>
        <errorDisplayField>xcdhcm__Continuous_Service_Date__c</errorDisplayField>
        <errorMessage>Continuous Service date cannot be later than start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__EmpDetail_Sort_Code_Validation</fullName>
        <active>false</active>
        <description>Deprecated</description>
        <errorConditionFormula>IF(not(ISBLANK(Sort_Code__c)),NOT(REGEX(Sort_Code__c,&quot;[0-9]{2}-[0-9]{2}-[0-9]{2}&quot;)),FALSE)</errorConditionFormula>
        <errorMessage>Deprecated - Sort Code should be of the format 99-99-99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Leaving_Date_not_before_Last_Working_Day</fullName>
        <active>true</active>
        <description>Leaving date cannot be earlier than Last working day</description>
        <errorConditionFormula>xcdhcm__Leaving_Date__c  &lt;  xcdhcm__Last_working_day__c</errorConditionFormula>
        <errorMessage>Leaving date cannot be earlier than Last working day.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_end_change_after_Payroll_cutoff</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(  xcdhcm__Payroll_end_date__c ),TODAY() &gt; DATE(YEAR(xcdhcm__Payroll_end_date__c ), MONTH(xcdhcm__Payroll_end_date__c ),VALUE(TEXT(xcdhcm__Company__r.xcdhcm__Payroll_cutoff_day__c))))</errorConditionFormula>
        <errorMessage>xx deprecated.  Payroll processing has started for this month. Please contact the Payroll Administrator immediately.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_end_date_not_before_Leaving_date</fullName>
        <active>true</active>
        <description>Do not deactivate - Payroll</description>
        <errorConditionFormula>and(
not(isnull( xcdhcm__Payroll_end_date__c )),
xcdhcm__Payroll_end_date__c &lt; xcdhcm__Leaving_Date__c )</errorConditionFormula>
        <errorMessage>Please set the Last pay run on or after the Employee’s Leaving date to ensure final payments are made correctly.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_start_after_Payroll_cutoff_day</fullName>
        <active>false</active>
        <description>xx deprecate</description>
        <errorConditionFormula>xcdhcm__Payroll_start_date__c &gt; DATE(YEAR(xcdhcm__Payroll_start_date__c), MONTH(xcdhcm__Payroll_start_date__c),VALUE(TEXT( xcdhcm__Company__r.xcdhcm__Payroll_cutoff_day__c)))</errorConditionFormula>
        <errorMessage>xx deprecatePayroll start date cannot be set for this month as processing is already under way. You must set the Payroll to start from the first of the following month.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_start_change_after_Payrol_cutoff</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED( xcdhcm__Payroll_start_date__c),TODAY() &gt; DATE(YEAR(xcdhcm__Payroll_start_date__c), MONTH(xcdhcm__Payroll_start_date__c),VALUE(TEXT(xcdhcm__Company__r.xcdhcm__Payroll_cutoff_day__c))))</errorConditionFormula>
        <errorMessage>xx deprecatePayroll start date can not be changed as Payroll processing is under way. Please contact the Payroll Administrator immediately.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Payroll_start_not_before_current_month</fullName>
        <active>false</active>
        <description>Payroll start date can not be earlier than the first day of the month in which the Employee record is created</description>
        <errorConditionFormula>xcdhcm__Payroll_start_date__c &lt; DATE( YEAR( datevalue(CreatedDate) ), MONTH(datevalue(CreatedDate) ), 1)</errorConditionFormula>
        <errorDisplayField>xcdhcm__Payroll_start_date__c</errorDisplayField>
        <errorMessage>Payroll start date cannot be prior to current month</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xcdhcm__Probationary_values_Rule</fullName>
        <active>false</active>
        <description>Optional.  Forces population of probation data.  Enable only where probation fields populated in joiner page 2</description>
        <errorConditionFormula>xcdhcm__Probation_Period__c</errorConditionFormula>
        <errorMessage>Probation Period and Probation Period Values are required for this employment status</errorMessage>
    </validationRules>
</CustomObject>